# popupImage

./: 1OGLWidget.cpp  1OGLWidget.h  Deformation.cpp  FoldLineOptimization.h  Info.plist  OGLWidget.cpp  OGLWidget.h  Utils_Ogl.cpp  Utils_Ogl.h  drawBoundaryLine.cpp  functionClickPatch.h  functionDivideBasePatch.h  functionDrawPatch.h  functionEventFilter.h  functionFindAllPath.h  functionFindBlob.h  functionFindConnection.h  functionFindMatIntersection.h  functionInitPatch.h  functionLabelContour.h  functionMat2QImage.h  functionOutputMat.h  imagesegmentationwidget.cpp  imagesegmentationwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oglwidget.cpp  oglwidget.h  pch.h  popupImage.pro  popupObjAddConnectionLineToMap.cpp  popupObjAlgorithm.cpp  popupObjAlgorithm.h  popupObjAssignNeighbor.cpp  popupObjAssignNeighbor.hpp  popupObjBuildBoundaryLineConnMap.cpp  popupObjBuildBoundaryLineConnMap.hpp  popupObjClassifyPatches.cpp  (+35 more)
Deformation/: CMakeLists.txt  Deformation.cpp  FoldLineOptimization.cpp  FoldLineOptimization.h  FoldLinePositionOptimization.cpp  PopupGraph.cpp  PopupGraph.h  PopupUtils.cpp  PopupUtils.h
Deformation/Results/bear/: output_fold_line.txt  output_new_patch_index_mask.txt  output_patch_index_mask.txt
Deformation/Results/cow/: output_fold_line.txt  output_new_patch_index_mask.txt  output_patch_index_mask.txt
Deformation/Test/: bear_segmentation.txt
code/: CMakeLists.txt  PopupGraph.cpp  PopupGraph.h  PopupOptimization.cpp  PopupOptimization.h  PopupUtils.cpp  PopupUtils.h  README.md  main.cpp
code/Examples/bear/: output_fold_line.txt  (+1 more)
(+136 files in other folders)
