cmake_minimum_required(VERSION 2.8)
project( PatchDeformation )
include_directories( MRF2.2 )
#include_directories( -I/usr/include -I/usr/local/include )
include_directories( /Library/gurobi650/mac64/include /usr/local/include )
set ( PROJECT_LINK_LIBS libMRF.a /Library/gurobi650/mac64/lib/libgurobi_c++.a /Library/gurobi650/mac64/lib/libgurobi65.so )
set ( CMAKE_BUILD_TYPE Release )
set ( CMAKE_CXX_FLAGS "-std=c++0x" )
link_directories( MRF2.2 )
 
find_package( OpenCV REQUIRED )
add_executable( PatchDeformation Deformation.cpp FoldLineOptimization.cpp PopupGraph.cpp PopupUtils.cpp )
target_link_libraries( PatchDeformation ${OpenCV_LIBS} )
target_link_libraries( PatchDeformation ${PROJECT_LINK_LIBS} )
