cmake_minimum_required(VERSION 2.8)
project( PopupDesign )
#include_directories( MRF2.2 )
#include_directories( -I/usr/include -I/usr/local/include )
include_directories( /Library/gurobi650/mac64/include /usr/local/include )
set ( PROJECT_LINK_LIBS /Library/gurobi650/mac64/lib/libgurobi_c++.a /Library/gurobi650/mac64/lib/libgurobi65.so )
#set ( CMAKE_BUILD_TYPE Release )
set ( CMAKE_CXX_FLAGS "-std=c++0x -g" )
#link_directories( MRF2.2 )

find_package( OpenCV REQUIRED )
find_package( gflags REQUIRED )
file(GLOB SOURCES "*.cpp")
add_executable( PopupDesign ${SOURCES} )
target_link_libraries( PopupDesign ${OpenCV_LIBS} gflags)
target_link_libraries( PopupDesign ${PROJECT_LINK_LIBS} )
